@@ -1,12 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST lettuce-0.2.1.tar.gz 39964 SHA256 ac454f082159155f346d24d0208d5cac5aab767c7689e2f997161613bbd21049 WHIRLPOOL 530464d6071c0259d5f36824d925b062d14c2e6526f8abf0e9c8c5ffec9db1178f301027d44efcbd34e11d6a61c1de52d0058b9d05428266f8576cb5c46df77f
 DIST lettuce-0.2.6.tar.gz 40096 SHA256 810d7289cd31e57cc4f1fffd27ca39804fe501ab332969f22cc5f2d05a07fbda WHIRLPOOL 110510e63a7ac9d55a9c6b448ab4543602d3344cbdc1d71deb5593d5abb5ca68a4dc5630230911440f92cd9d26e23d92e822d92a453502083b6868e2c3a3a933
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREKAAYFAlAik5cACgkQzJrj3cAXR0nwXACghqQkMce7UVMQL9q6G+ZgvN8s
-MeEAnjlWG5QmXn8FnIzv+Cpj/HeTrNnR
-=FxOD
+iEYEAREIAAYFAlA+vWoACgkQzJrj3cAXR0kaCACgr4wAdOBvy6ClazSxt7g2iZ+c
+lQYAnAg57J4lVX74ZLTvinc4gCDS8yKX
+=8iyr
 -----END PGP SIGNATURE-----
