@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=dev-python/setuptools !<sys-apps/portage-2.1.10.58 python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 )
-DESCRIPTION=Cucumber-ish BDD for python
-EAPI=4
-HOMEPAGE=http://lettuce.it/
-IUSE=python_targets_python2_5 python_targets_python2_6 python_targets_python2_7
-KEYWORDS=amd64 x86
-LICENSE=MIT
-RDEPEND=dev-python/setuptools dev-python/fuzzywuzzy python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 )
-REQUIRED_USE=|| ( python_targets_python2_5 python_targets_python2_6 python_targets_python2_7 )
-SLOT=0
-SRC_URI=mirror://pypi/l/lettuce/lettuce-0.2.1.tar.gz
-_eclasses_=base	d40e074a6349af3ea5e937210630bdc1	eutils	327b713e2d6949c42cd96bc4898fd280	jnrowe-pypi	686cf6e0feaf26499041ad17392c3774	multilib	5782800349f728f725f9378105c6a2ab	python-distutils-ng	6786a3ab681bb2f21310183278f72e33	toolchain-funcs	d3b5812eeab360bc41aa48b6cdbbc142	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=b7b1766f677788c94d3fcc199fd30238
