@@ -4,7 +4,6 @@ REM 2012-08-30 *1 MSG %"Stabilise amd64 dev-python/flake8-1.4%" %a
 REM 2012-08-30 *1 MSG %"Stabilise amd64 games-puzzle/gbrainy-2.1.4%" %a
 REM 2012-08-30 *1 MSG %"Stabilise amd64 dev-python/genzshcomp-0.3.1%" %a
 REM 2012-08-30 *1 MSG %"Stabilise amd64 dev-python/lettuce-0.2.6%" %a
-REM 2012-08-30 *1 MSG %"Stabilise x86 dev-python/lettuce-0.2.6%" %a
 REM 2012-08-30 *1 MSG %"Stabilise amd64 dev-lua/luaposix-5.1.20%" %a
 REM 2012-08-30 *1 MSG %"Stabilise x86 dev-lua/luaposix-5.1.20%" %a
 REM 2012-08-30 *1 MSG %"Stabilise amd64 dev-python/pgmagick-0.5.3%" %a
