@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Aug 2012; James Rowe <jnrowe@gmail.com> -lettuce-0.2.1.ebuild,
+  lettuce-0.2.6.ebuild:
+  Keyworded x86.
+
   31 Jul 2012; James Rowe <jnrowe@gmail.com> lettuce-0.2.1.ebuild,
   lettuce-0.2.6.ebuild:
   Don't run python-distutils-ng_redoscript, as recent silent updates to
